# RS_School_Capstone_Project

./: README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: github-action.yml  main.yml
mlruns/.trash/1/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/0385b55f9bc441e292e5de207acc54fe/: meta.yaml
mlruns/0/089e81a4bac247f48c45eecc33212f53/: meta.yaml
mlruns/0/0b671b19c0ed42958f21c2cd8695b8b5/: meta.yaml
mlruns/0/10f6497576a244c3894aaca173a9e887/: meta.yaml
mlruns/0/16d7d73de6fb4beaa2d411cb877a96fe/: meta.yaml
mlruns/0/175a4d40317c4de5ba07ed412e9e238a/: meta.yaml
mlruns/0/1dcae7aac8c94a80a8d804b0386d5f3b/: meta.yaml
mlruns/0/23e67939752d47bf9c76240631b5bbf1/: meta.yaml
mlruns/0/252b8f3349d54d0cab97d010c8809189/: meta.yaml
mlruns/0/267a4e19db52410a8456bc4f10054061/: meta.yaml
mlruns/0/2fc95c449dd24bd98817533bc751ec04/: meta.yaml
mlruns/0/31d9273fb7784f8fbb5311148b1555a1/: meta.yaml
mlruns/0/363d3c70f7cc4141927bc5813df85de2/: meta.yaml
mlruns/0/40ca99f1b0c2469598de561e2c68a718/: meta.yaml
mlruns/0/421940dd7b9f44759a5dd7fc794cd834/: meta.yaml
mlruns/0/491544e58b4343aa9eb1aa3c0a368f6a/: meta.yaml
mlruns/0/4a69fe8bcc0b4b86bf4b00b6531c940e/: meta.yaml
mlruns/0/4fcc363ac4274e9ebbdc60a024bb9b15/: meta.yaml
src/module_9_project/: config.py  data.py  eda.py  pipeline.py  predict.py  test_file.py  train.py
tests/: model.joblib  test_data.py  test_module_9_project.py  test_pipeline.py  test_predict.py  test_train.py
tests/test_data/: data_for_pred.csv  model.joblib  test_data.csv
(+93 files in other folders)
