[tool.poetry]
name = "module_9_project"
version = "0.1.0"
description = ""
authors = ["Savelyeva_A <Aliaksandra.Savelyeva@ibm.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
numpy = "^1.22.3"
pandas-profiling = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
