[tool.poetry]
name = "module_9_project"
version = "0.1.0"
description = ""
authors = ["Savelyeva_A <Aliaksandra.Savelyeva@ibm.com>"]

[tool.poetry.scripts]
eda = "module_9_project.eda:get_eda_profile"
train = "module_9_project.train:train_model"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.3.5"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
numpy = "^1.22.3"
pandas-profiling = "^3.1.0"
click = "^8.1.3"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
